--- a/client/style.css
+++ b/client/style.css
@@ -145,3 +145,24 @@ textarea {
     border-radius: 5px;
     cursor: pointer;
 }
+
+.floating-container {
+    position: fixed;
+    bottom: 200px;
+    right: 20px;
+    width: 200px;
+    background-color: white;
+    /* border: 1px solid gray; */
+    padding: 10px;
+    border-radius: 0.5rem;
+}
+
+#users {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#users li {
+    margin-bottom: 5px;
+}
