--- a/client/style.css
+++ b/client/style.css
@@ -145,3 +145,172 @@ textarea {
     border-radius: 5px;
     cursor: pointer;
 }
+
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: gainsboro;
+    margin: 0;
+}
+
+.grid {
+    display: grid;
+    height: 100vh;
+}
+
+.flex {
+    display: flex;
+}
+
+.header {
+    font-size: 24px;
+    text-align: center;
+    padding: 16px;
+    background-color: #5a67d8;
+    color: white;
+}
+
+.chat-messages {
+    flex: 1;
+    overflow-y: auto;
+    padding: 16px;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.input-container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: calc(100% - 32px);
+    padding: 1rem;
+    background-color: #ffffff;
+}
+
+.input-area {
+    display: flex;
+    flex-direction: column;
+}
+
+textarea {
+    flex: 1;
+    resize: none;
+    padding: 8px;
+    margin-bottom: 8px;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.buttons input {
+    flex: 1;
+    padding: 8px;
+    margin-right: 8px;
+}
+
+.buttons button {
+    padding: 8px 16px;
+    background-color: #5a67d8;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.message {
+    display: flex;
+    align-items: flex-start;
+    background-color: #e2e8f0;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.avatar {
+    width: 30px;
+    height: 30px;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    background-color: #5a67d8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-weight: bold;
+}
+
+.message-details {
+    margin-left: 8px;
+}
+
+.username {
+    font-weight: bold;
+}
+
+.time {
+    font-size: 12px;
+    color: #888;
+}
+
+.message-text {
+    margin-top: 4px;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.popup {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.popup input[type="text"] {
+    width: 200px;
+    padding: 10px;
+}
+
+.popup button {
+    padding: 10px 20px;
+    background-color: #5a67d8;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.floating-container {
+    position: fixed;
+    bottom: 200px;
+    right: 20px;
+    width: 200px;
+    background-color: white;
+    /* border: 1px solid gray; */
+    padding: 10px;
+    border-radius: 0.5rem;
+}
+
+#users {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#users li {
+    margin-bottom: 5px;
+}
