--- a/client/style.css
+++ b/client/style.css
@@ -297,16 +297,17 @@ textarea {
 .floating-container {
     position: fixed;
     bottom: 200px;
-    right: 20px;
+    right: 0px;
     width: 200px;
     background-color: white;
     /* border: 1px solid gray; */
     padding: 10px;
-    border-radius: 0.5rem;
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
 }
 
 #users {
-    list-style: none;
+    list-style: disc inside;
     padding: 0;
     margin: 0;
 }
