Revert "Merge branch 'main'"
This reverts commit 9365bf8d6de1cfc58f4d73c3b7bdf451b2d12387, reversing
changes made to 497c3c2291bab1036050b9e6dac6518b0edbb374.

--- a/client/style.css
+++ b/client/style.css
@@ -293,3 +293,25 @@ textarea {
     border-radius: 5px;
     cursor: pointer;
 }
+
+.floating-container {
+    position: fixed;
+    bottom: 200px;
+    right: 0px;
+    width: 200px;
+    background-color: white;
+    /* border: 1px solid gray; */
+    padding: 10px;
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+}
+
+#users {
+    list-style: disc inside;
+    padding: 0;
+    margin: 0;
+}
+
+#users li {
+    margin-bottom: 5px;
+}
